src/Pages/Landing/LandingStyle.css
/* .wave-1 {

   height: 250px;
   width: 100%;
   bottom: 0;
   background-color: #1d2228;
}
.wave-1:before {
    content: "";
    display: block;
    position: absolute;
    border-radius: 100% 50%;
    width: 50%;
    height: 60%;
    background-color: #1d2228;
    transform: translate(100%,30%);

}
.wave-1:after {
    content: "";
    display: block;
    position: absolute;
    border-radius: 100% 50%;
    width: 60%;
    height: 60%;
    background-color: #1d2228;
    transform: translate(-4%,40%);
} */

.centered-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 120vh;
  }
.account-selection {
  width: 500px;
  height: 480px;
  border-radius: 20px;
  box-shadow: 0 0 40px 2px lightgrey;
}
.account-selection-heading {
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #1d2228;
    background-color: #f5f5f5;
    border-radius: 20px 20px 0px 0px;
  }
  
.user-list {
  max-height: 360px;
  overflow: scroll;
  overflow-x: hidden;
  margin: 10px 0;
}

.user-info {
  display: flex;
  align-items: center;
  width:max-content;
  margin: 0 20px;
}

.user-info p{
    margin-left:10px;
}

hr {
    margin: 10px 20px;
}
.user-info:hover {
  cursor: pointer;
}
.user-info img {
  width: 30px;
  height: 30px;
  border-radius: 100%;
}

